fix: Large conduit networks can cause stack overflow during loading
Flattens the conduit graph construction into a loop instead of a recursive method, also should reduce complexity by avoiding Graph.connect.

Closes GH-1004